# SCAFMaps

./: .gitmodules  CMakeLists.txt  README.md
alg/: CMakeLists.txt  mesh_optimization.cpp  mesh_optimization.h  seam_generation.cpp  seam_generation.h  tutte_embedding.cpp  tutte_embedding.h
common/: CMakeLists.txt  CMakeLists.txt.bak  mesh_type.h  mesh_util.cpp  mesh_util.h  utilities.h
io/: CMakeLists.txt  obj_io.cpp  obj_io.h
solver/: CMakeLists.txt  scaf_data.cpp  scaf_data.h  solver.cpp  solver.h
src/: main.cpp  scaf_maps.cpp
